--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=proyectoCreditoWeb
+spring.datasource.url= jdbc:mysql://localhost/proyectocreditoweb
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
